--- a/aio.ipynb
+++ b/aio.ipynb
@@ -3039,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3047,7 +3047,7 @@
      "output_type": "stream",
      "text": [
       "---------baseline---------\n",
-      "2024-05-06 22:18:54,014\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
+      "2024-05-07 14:45:09,936\u001b[32m <INFO> WatchDog: success/total: 6/6\u001b[0m\n",
       "{33: {'val': {'accuracy': 91.48, 'F1-score': 88.64, 'loss': 0.23}},\n",
       " 18: {'val': {'accuracy': 91.54, 'F1-score': 88.72, 'loss': 0.23}},\n",
       " 78: {'val': {'accuracy': 91.54, 'F1-score': 88.75, 'loss': 0.23}},\n",
@@ -3055,7 +3055,7 @@
       " 23: {'val': {'accuracy': 91.6, 'F1-score': 88.79, 'loss': 0.23}}}\n",
       "{'val': {'accuracy': 91.51, 'F1-score': 88.69, 'loss': 0.23}}\n",
       "---------TWR---------\n",
-      "2024-05-06 22:18:54,017\u001b[32m <INFO> WatchDog: success/total: 30/30\u001b[0m\n",
+      "2024-05-07 14:45:09,939\u001b[32m <INFO> WatchDog: success/total: 10/10\u001b[0m\n",
       "best_sedds_of_stage1:  33 18 78 31 23\n",
       "{33: {'val': {'accuracy': 91.45, 'F1-score': 88.69, 'loss': 1.02}},\n",
       " 18: {'val': {'accuracy': 91.45, 'F1-score': 88.64, 'loss': 1.04}},\n",
@@ -3106,7 +3106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3114,68 +3114,14 @@
      "output_type": "stream",
      "text": [
       "---------TWR-H/P---------\n",
-      "2024-05-06 22:21:30,545 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.4_record_pipline/seed_of_stage1=33/1/16/2e-06/21\u001b[0m\n",
-      "2024-05-06 22:21:30,546 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.4_record_pipline/seed_of_stage1=18/1/16/2e-06/21\u001b[0m\n"
+      "21 12 52 15 6\n",
+      "{18: {'val': {'acc_pipline': 91.54, 'f1_pipline': 88.63, 'accuracy': 91.52, 'F1-score': 88.53, 'loss': 1.22}},\n",
+      " 33: {'val': {'acc_pipline': 91.56, 'f1_pipline': 88.68, 'accuracy': 91.49, 'F1-score': 88.49, 'loss': 1.2}},\n",
+      " 23: {'val': {'acc_pipline': 91.65, 'f1_pipline': 88.82, 'accuracy': 91.48, 'F1-score': 88.53, 'loss': 1.19}},\n",
+      " 78: {'val': {'acc_pipline': 91.53, 'f1_pipline': 88.62, 'accuracy': 91.45, 'F1-score': 88.42, 'loss': 1.2}},\n",
+      " 31: {'val': {'acc_pipline': 91.51, 'f1_pipline': 88.58, 'accuracy': 91.4, 'F1-score': 88.36, 'loss': 1.16}}}\n",
+      "{'val': {'acc_pipline': 91.56, 'f1_pipline': 88.67, 'accuracy': 91.47, 'F1-score': 88.47, 'loss': 1.19}}\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #800000; text-decoration-color: #800000\">╭─────────────────────────────── </span><span style=\"color: #800000; text-decoration-color: #800000; font-weight: bold\">Traceback </span><span style=\"color: #bf7f7f; text-decoration-color: #bf7f7f; font-weight: bold\">(most recent call last)</span><span style=\"color: #800000; text-decoration-color: #800000\"> ────────────────────────────────╮</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">&lt;module&gt;</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">15</span>                                                                                   <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">12 │   # seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model</span>    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">13 │   </span>                                                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">14 │   </span>seeds_dir = Path(seeds_dir)                                                             <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>15 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   </span>_metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=<span style=\"color: #0000ff; text-decoration-color: #0000ff\">True</span>)          <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">16 │   </span>_metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, <span style=\"color: #0000ff; text-decoration-color: #0000ff\">1</span>, metric_for_compare=metric    <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">17 │   </span>seeds_not_del = []                                                                      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">18 │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">for</span> metric <span style=\"color: #ff00ff; text-decoration-color: #ff00ff\">in</span> [<span style=\"color: #808000; text-decoration-color: #808000\">\"acc_pipline\"</span>, <span style=\"color: #808000; text-decoration-color: #808000\">\"accuracy\"</span>]:                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">/home/jjwang/codes/toolkit/toolkit/training/</span><span style=\"color: #808000; text-decoration-color: #808000; font-weight: bold\">watchdog.py</span>:<span style=\"color: #0000ff; text-decoration-color: #0000ff\">344</span> in <span style=\"color: #00ff00; text-decoration-color: #00ff00\">metric_dicts_from_diff_seeds</span>      <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>                                                                                                  <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">341 </span><span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">│   │   </span><span style=\"color: #808000; text-decoration-color: #808000\">return: `dict[seed][split] = MetricDict`</span>                                           <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">342 </span><span style=\"color: #bfbf7f; text-decoration-color: #bfbf7f\">│   │   </span><span style=\"color: #808000; text-decoration-color: #808000\">\"\"\"</span>                                                                                <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">343 │   │   </span>seeds_dir = Path(seeds_dir)                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span> <span style=\"color: #800000; text-decoration-color: #800000\">❱ </span>344 <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">│   │   </span><span style=\"color: #0000ff; text-decoration-color: #0000ff\">assert</span> seeds_dir.exists(), <span style=\"color: #808000; text-decoration-color: #808000\">f\"Seeds directory dose NOT exist: `{</span>seeds_dir<span style=\"color: #808000; text-decoration-color: #808000\">}`\"</span>        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">345 │   │   </span>seed_dirs = <span style=\"color: #00ffff; text-decoration-color: #00ffff\">list</span>(seeds_dir.iterdir())                                              <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">346 │   │   # seed_dirs = list(seeds_dir.glob(\"*\"))</span>                                            <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">│</span>   <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">347 │   │   </span>success = <span style=\"color: #0000ff; text-decoration-color: #0000ff\">0</span>                                                                        <span style=\"color: #800000; text-decoration-color: #800000\">│</span>\n",
-       "<span style=\"color: #800000; text-decoration-color: #800000\">╰──────────────────────────────────────────────────────────────────────────────────────────────────╯</span>\n",
-       "<span style=\"color: #ff0000; text-decoration-color: #ff0000; font-weight: bold\">AssertionError: </span>Seeds directory dose NOT exist: \n",
-       "`outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod<span style=\"color: #808000; text-decoration-color: #808000\">el_hardcases_from_baseline_warmboost_fix_num_rat</span>\n",
-       "<span style=\"color: #808000; text-decoration-color: #808000\">io</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.</span>4_record_pipline/<span style=\"color: #808000; text-decoration-color: #808000\">seed_of_stage1</span>=<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">78</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">16</span>/<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2e-06</span>`\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[31m╭─\u001b[0m\u001b[31m──────────────────────────────\u001b[0m\u001b[31m \u001b[0m\u001b[1;31mTraceback \u001b[0m\u001b[1;2;31m(most recent call last)\u001b[0m\u001b[31m \u001b[0m\u001b[31m───────────────────────────────\u001b[0m\u001b[31m─╮\u001b[0m\n",
-       "\u001b[31m│\u001b[0m in \u001b[92m<module>\u001b[0m:\u001b[94m15\u001b[0m                                                                                   \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m12 \u001b[0m\u001b[2m│   \u001b[0m\u001b[2m# seeds_dir = f\"outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model\u001b[0m    \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m13 \u001b[0m\u001b[2m│   \u001b[0m                                                                                        \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m14 \u001b[0m\u001b[2m│   \u001b[0mseeds_dir = Path(seeds_dir)                                                             \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m15 \u001b[2m│   \u001b[0m_metric_dicts = WatchDog.metric_dicts_from_diff_seeds(seeds_dir, silence=\u001b[94mTrue\u001b[0m)          \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m16 \u001b[0m\u001b[2m│   \u001b[0m_metric_dict_topk, _mean = WatchDog.topk(_metric_dicts, \u001b[94m1\u001b[0m, metric_for_compare=metric    \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m17 \u001b[0m\u001b[2m│   \u001b[0mseeds_not_del = []                                                                      \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m18 \u001b[0m\u001b[2m│   \u001b[0m\u001b[94mfor\u001b[0m metric \u001b[95min\u001b[0m [\u001b[33m\"\u001b[0m\u001b[33macc_pipline\u001b[0m\u001b[33m\"\u001b[0m, \u001b[33m\"\u001b[0m\u001b[33maccuracy\u001b[0m\u001b[33m\"\u001b[0m]:                                              \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[2;33m/home/jjwang/codes/toolkit/toolkit/training/\u001b[0m\u001b[1;33mwatchdog.py\u001b[0m:\u001b[94m344\u001b[0m in \u001b[92mmetric_dicts_from_diff_seeds\u001b[0m      \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m                                                                                                  \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m341 \u001b[0m\u001b[2;33m│   │   \u001b[0m\u001b[33mreturn: `dict[seed][split] = MetricDict`\u001b[0m                                           \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m342 \u001b[0m\u001b[2;33m│   │   \u001b[0m\u001b[33m\"\"\"\u001b[0m                                                                                \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m343 \u001b[0m\u001b[2m│   │   \u001b[0mseeds_dir = Path(seeds_dir)                                                        \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m \u001b[31m❱ \u001b[0m344 \u001b[2m│   │   \u001b[0m\u001b[94massert\u001b[0m seeds_dir.exists(), \u001b[33mf\u001b[0m\u001b[33m\"\u001b[0m\u001b[33mSeeds directory dose NOT exist: `\u001b[0m\u001b[33m{\u001b[0mseeds_dir\u001b[33m}\u001b[0m\u001b[33m`\u001b[0m\u001b[33m\"\u001b[0m        \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m345 \u001b[0m\u001b[2m│   │   \u001b[0mseed_dirs = \u001b[96mlist\u001b[0m(seeds_dir.iterdir())                                              \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m346 \u001b[0m\u001b[2m│   │   \u001b[0m\u001b[2m# seed_dirs = list(seeds_dir.glob(\"*\"))\u001b[0m                                            \u001b[31m│\u001b[0m\n",
-       "\u001b[31m│\u001b[0m   \u001b[2m347 \u001b[0m\u001b[2m│   │   \u001b[0msuccess = \u001b[94m0\u001b[0m                                                                        \u001b[31m│\u001b[0m\n",
-       "\u001b[31m╰──────────────────────────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
-       "\u001b[1;91mAssertionError: \u001b[0mSeeds directory dose NOT exist: \n",
-       "`outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_mod\u001b[33mel_hardcases_from_baseline_warmboost_fix_num_rat\u001b[0m\n",
-       "\u001b[33mio\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1;36m.\u001b[0m4_record_pipline/\u001b[33mseed_of_stage1\u001b[0m=\u001b[1;36m78\u001b[0m/\u001b[1;36m1\u001b[0m/\u001b[1;36m16\u001b[0m/\u001b[1;36m2e-06\u001b[0m`\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -3184,7 +3130,7 @@
     "metric_for_compare = \"acc_pipline\"\n",
     "metric_for_compare = \"accuracy\"\n",
     "\n",
-    "ratio = 0.4\n",
+    "ratio = 0.2\n",
     "\n",
     "metric_dicts = dict()\n",
     "seeds = []\n",
@@ -4070,7 +4016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -4078,7 +4024,6 @@
      "output_type": "stream",
      "text": [
       "2 2\n",
-      "2024-05-06 22:23:51,413 <DEBUG> WatchDog: ❌ Failed: outputs/QQP/roberta-base/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.4_record_pipline/seed_of_stage1=33/1/16/2e-06/21\u001b[0m\n",
       "[[[89.23, 89.38, 89.39, 89.42, 89.39], [0, 0, 0, 0, 0]], [[91.47, 0, 0, 0, 0], [0, 0, 0, 0, 0]]]\n"
      ]
     }
