--- a/aio.ipynb
+++ b/aio.ipynb
@@ -36677,9 +36677,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-05-09 18:24:41,930] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "from load_data_fns import key_map\n",
@@ -36699,7 +36707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36708,7 +36716,7 @@
        "(8698, 1811, 1991)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36719,15 +36727,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11171\n",
+      "0.8948\n",
       "12500\n",
+      "\n",
       "12500\n"
      ]
     },
@@ -36737,7 +36746,7 @@
        "(8698, 1811, 1991, 3802)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36749,6 +36758,10 @@
     "results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/14/evaluator/step=29846/TEST.json\"\n",
     "results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.6/seed_of_stage1=14/1/16/2e-06/54/evaluator/step=912/TEST.json\"\n",
     "results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR-P_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8/seed_of_stage1=14/1/16/2e-06/11/evaluator/step=912/TEST.json\"\n",
+    "\n",
+    "results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR-H_nodrop_single_model_hardcases_from_baseline_warmboost_fix_num_ratio=0.8_record_pipline/seed_of_stage1=14/1/16/2e-06/0/evaluator/step=912/TEST.json\"\n",
+    "pipline = False\n",
+    "\n",
     "with open(results_dir, \"r\") as f:\n",
     "    metric_dict, bad_cases, good_cases_idxs, controversial_cases, confused_cases, definite_cases = json.load(f)\n",
     "\n",
@@ -36762,16 +36775,30 @@
     "all_cases = dict()\n",
     "for cases in controversial_cases, confused_cases, definite_cases:\n",
     "    all_cases.update(cases)\n",
+    "print(len(definite_cases) / len(all_cases))\n",
+    "# print((len(confused_cases) + len(controversial_cases)) / len(all_cases))\n",
     "df_controdictory, df_controversial, df_consistent = [], [], []\n",
     "\n",
     "\n",
-    "if \"TWR-P\" in results_dir:\n",
+    "# if \"TWR-P\" in results_dir:\n",
+    "#     results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/14/evaluator/step=29846/TEST.json\"\n",
+    "#     with open(results_dir, \"r\") as f:\n",
+    "#         metric_dict, bad_cases, good_cases_idxs, controversial_cases, confused_cases, definite_cases = json.load(f)\n",
+    "#         all_cases.update(definite_cases)\n",
+    "#         print(len(definite_cases))\n",
+    "# print(len(all_cases))\n",
+    "\n",
+    "if pipline:\n",
     "    results_dir = \"outputs/LCQMC/bert-base-chinese/DATA_AUG_REP4/all/TWR_nodrop_single_model/3/16/3e-05/14/evaluator/step=29846/TEST.json\"\n",
     "    with open(results_dir, \"r\") as f:\n",
-    "        metric_dict, bad_cases, good_cases_idxs, controversial_cases, confused_cases, definite_cases = json.load(f)\n",
-    "        all_cases.update(definite_cases)\n",
-    "        print(len(definite_cases))\n",
+    "        metric_dict, bad_cases, good_cases_idxs, _controversial_cases, _confused_cases, _definite_cases = json.load(f)\n",
+    "        print(len(_definite_cases) / len(all_cases))\n",
+    "        all_cases.update(_definite_cases)\n",
+    "        for key, value in all_cases.items():\n",
+    "            if key in confused_cases:\n",
+    "                value[\"pred\"] = int(sum(value[\"ori_labels\"]) > 2)\n",
     "print(len(all_cases))\n",
+    "print()\n",
     "# print(len(set(all_cases.keys()) & set(definite_cases.keys())))\n",
     "\n",
     "\n",
@@ -36796,17 +36823,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "89.43"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(accuracy_score([value[\"labels\"] for value in all_cases.values()], [value[\"pred\"] for value in all_cases.values()]) * 100, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "92.53\n",
-      "80.01\n",
-      "81.06\n",
-      "79.06\n"
+      "93.17\n",
+      "80.88\n",
+      "80.84\n",
+      "80.91\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "\n",
+    "for df in (df_consistent, df_inconsistent, df_controdictory, df_controversial):\n",
+    "    print(round(accuracy_score(df[\"label\"], df[\"pred\"]) * 100, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.75"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(accuracy_score([value[\"labels\"] for value in all_cases.values()], [value[\"pred\"] for value in all_cases.values()]) * 100, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92.83\n",
+      "79.43\n",
+      "79.9\n",
+      "79.01\n"
      ]
     }
    ],
