--- a/aio.ipynb
+++ b/aio.ipynb
@@ -36965,6 +36965,126 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extral eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-10 00:25:40,734\u001b[32m <INFO> Configuration: 👻 Custom attributes:\u001b[0m\n",
+      "2024-05-10 00:25:40,735\u001b[32m <INFO> Configuration:    text_type=ORI\u001b[0m\n",
+      "2024-05-10 00:25:40,736\u001b[32m <INFO> Configuration:    min_threshold=None\u001b[0m\n",
+      "2024-05-10 00:25:40,736\u001b[32m <INFO> Configuration:    alpha=None\u001b[0m\n",
+      "2024-05-10 00:25:40,737\u001b[32m <INFO> Configuration:    part=all\u001b[0m\n",
+      "2024-05-10 00:25:40,738\u001b[32m <INFO> Configuration:    auxloss_warmup_steps=3\u001b[0m\n",
+      "2024-05-10 00:25:40,738\u001b[32m <INFO> Configuration:    total_num_steps=44769\u001b[0m\n",
+      "2024-05-10 00:25:40,739\u001b[32m <INFO> Configuration:    steps_per_epoch=14923\u001b[0m\n",
+      "2024-05-10 00:25:40,740\u001b[32m <INFO> Configuration:    training_runtime={'cur_step': 37307, 'cur_epoch': 2}\u001b[0m\n",
+      "2024-05-10 00:25:40,764 <DEBUG> TextDataset: ⏳ Loading TEST dataset ...\u001b[0m\n",
+      "2024-05-10 00:25:40,764 <DEBUG> TextDataset: Model max length: 512\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7fe21ad30f4344c88b931dc7ffdb470b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tokenize TEST input texts:   0%|          | 0/37500 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-10 00:25:46,836 <DEBUG> TextDataset: ⌛ Loading TEST data takes 6.07 sec.\u001b[0m\n",
+      "2024-05-10 00:25:46,838\u001b[32m <INFO> [toolkit]: Total TEST data: 37500\u001b[0m\n",
+      "2024-05-10 00:25:46,838\u001b[32m <INFO> [toolkit]: Max length of input: 152\u001b[0m\n",
+      "2024-05-10 00:25:46,839\u001b[32m <INFO> [toolkit]: Max length of label: 1\u001b[0m\n",
+      "2024-05-10 00:25:47,031\u001b[32m <INFO> [toolkit]: ✂️  Truncating TEST data: cnt=0, input_len=152, label_len=1\u001b[0m\n",
+      "2024-05-10 00:25:47,032\u001b[32m <INFO> [toolkit]: Total TEST data: 37500\u001b[0m\n",
+      "2024-05-10 00:25:47,033\u001b[32m <INFO> [toolkit]: Max length of input: 152\u001b[0m\n",
+      "2024-05-10 00:25:47,033\u001b[32m <INFO> [toolkit]: Max length of label: 1\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from load_data_fns import LOAD_DATA_FNS, DatasetName, TextType\n",
+    "\n",
+    "# from torch.utils.data import DataLoader\n",
+    "from transformers import RobertaTokenizer\n",
+    "from toolkit.nlp import TextDataset\n",
+    "from toolkit.nlp import NLPTrainingConfig\n",
+    "from toolkit.enums import Split\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "split = \"test\"\n",
+    "model_path = \"outputs/LCQMC/bert-base-chinese/ORI/all/Baseline_nodrop_baseline/3/16/3e-05/14/optimal_checkpoint\"\n",
+    "\n",
+    "config = NLPTrainingConfig.load(model_path)\n",
+    "model_type = config.model_type\n",
+    "dataset_name = config.dataset_name\n",
+    "config.text_type = \"EXTRAL_EVAL\"\n",
+    "# config.test_file_path=\"./data/LCQMC/test/qwen_with_rephrase_clean_nodrop.jsonl\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
+    "\n",
+    "dataset = TextDataset.from_file(\n",
+    "    config.test_file_path if split == \"test\" else config.val_file_path,\n",
+    "    tokenizer,\n",
+    "    split=Split.TEST if split == \"test\" else Split.VALIDATION,\n",
+    "    configs=config,\n",
+    "    load_data_fn=LOAD_DATA_FNS[DatasetName[config.dataset_name]],\n",
+    "    text_type=TextType[config.text_type],\n",
+    "    dataset_name=DatasetName[config.dataset_name],\n",
+    "    use_cache=False,\n",
+    ")\n",
+    "dataset.report()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from toolkit.training import Evaluator\n",
+    "from model.MatchModel_binary_classification import RobertaModel_rephrase, BertModel_rephrase, BertMultiModel_rephrase\n",
+    "\n",
+    "from toolkit.enums import Split\n",
+    "from utils.evaluate import Evaluator1\n",
+    "\n",
+    "model = BertModel_rephrase.from_pretrained(model_path)\n",
+    "config.batch_size_infer = 64\n",
+    "Evaluator1.confused_use_ot = True\n",
+    "Evaluator1.save_results = False\n",
+    "evaluator = Evaluator1(\n",
+    "    \"classify\",\n",
+    "    Split.VALIDATION if split=='val' else Split.TEST,\n",
+    "    config=config,\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    dataset=dataset,\n",
+    "    extral_args_evaluation={\"is_train\":False}\n",
+    ")\n",
+    "metric_dict, bad_cases, good_cases_idxs, controversial_cases, confused_cases, definite_cases, all_logits,all_labels= evaluator.eval(cuda_id=0)\n",
+    "print(metric_dict)"
+   ]
   }
  ],
  "metadata": {
